--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -46,3 +46,24 @@ h1 {
 	border-radius: 5px;
 }
 
+#tabela {
+	margin-top: 30px;
+	border-collapse: collapse;
+}
+
+
+#tabela th {
+	border: 1px solid #ddd;
+	padding: 10px;
+	text-align: Left;
+	background-color: #66bbff;
+	color: #fff;
+}
+
+
+#tabela td {
+	border: 1px solid #ddd;
+	padding: 10px;
+	
+}
+
